@@ -5,8 +5,7 @@ import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 /**
@@ -16,15 +15,14 @@ import java.util.UUID;
  */
 // tag::adocSnippet[]
 @Path("/artists")
-@Produces(MediaType.APPLICATION_JSON)
 public class ArtistResource {
 
-  private static ArrayList<Artist> artists = new ArrayList<>(Arrays.asList(
+  private static List<Artist> artists = List.of(
     new Artist().id(UUID.randomUUID()).firstName("John").lastName("Lennon"),
     new Artist().id(UUID.randomUUID()).firstName("Paul").lastName("McCartney"),
     new Artist().id(UUID.randomUUID()).firstName("George").lastName("Harrison"),
     new Artist().id(UUID.randomUUID()).firstName("Ringo").lastName("Starr")
-  ));
+  );
 
   // tag::adocSkip[]
   /**
@@ -36,6 +34,7 @@ public class ArtistResource {
    */
   // end::adocSkip[]
   @GET
+  @Produces(MediaType.APPLICATION_JSON)
   public Response getAllArtists() {
     return Response.ok(artists).build();
   }
